...

	const val DropdownMenuError = "base_dropdown_error"

	const val TopAppBarActionsContainer = "base_top_app_bar_actions_container"
	const val TopAppBarTitle = "base_top_app_bar_title"

	const val ConfirmationDialogSheet = "base_confirmation_dialog_sheet"
	const val ConfirmationDialogTitle = "base_confirmation_dialog_title"
	const val ConfirmationDialogNegativeButton = "base_confirmation_dialog_negative_button"
	const val ConfirmationDialogPositiveButton = "base_confirmation_dialog_positive_button"
	const val ConfirmationDialogPositiveLoading = "base_confirmation_dialog_positive_loading"
	const val ConfirmationDialogEntry = "base_confirmation_dialog_entry"
	const val ExternalResourceMessage = "base_external_resource_message"
	const val ExternalResourceUrl = "base_external_resource_url"
	const val SnackbarContainer = "base_snackbar_container"
	const val SnackbarMessage = "base_snackbar_message"
	const val SnackbarActionButton = "base_snackbar_action_button"

	const val WheelPickerList = "base_wheel_picker_list"
	const val EmptyStateAnimation = "base_empty_state_animation"
	const val ErrorStateAnimation = "base_error_state_animation"
...
